# planar-motion

./: .gitignore  CMakeLists.txt  c.sh  main.cpp  readme.md
example/: 2pt_direct.cpp  2pt_ransac.cpp  2pts_cvmat.cpp  draw_x.cpp  fmat_2pts.cpp  fmat_2pts_ransac.cpp  outlier_rejection.cpp
include/: fpsolver.h  ransac.h
results/: Essential and Fundamental matrix
